force-app/src/objects/Product2/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bergen</fullName>
            </value>
            <value>
                <fullName>Kristiansand</fullName>
            </value>
            <value>
                <fullName>Nettstudier</fullName>
            </value>
            <value>
                <fullName>Oslo</fullName>
            </value>
            <value>
                <fullName>Stavanger</fullName>
            </value>
            <value>
                <fullName>Trondheim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>