force-app/src/objects/Product2/fields/NewID__c.field-meta.xml
<CustomField>
    <fullName>NewID__c</fullName>
    <externalId>true</externalId>
    <label>New ID</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>