force-app/src/objects/Product2/fields/OldID__c.field-meta.xml
<CustomField>
    <fullName>OldID__c</fullName>
    <externalId>true</externalId>
    <label>Old ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>