force-app/src/objects/Product2/fields/TermCode__c.field-meta.xml
<CustomField>
    <fullName>TermCode__c</fullName>
    <description>Mastered in Banner</description>
    <label>Term Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>